objects/ssot__PatientMedicationAdministration__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceCodeId__c</fullName>
        <label>Device Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medication Administration Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubPotent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Potent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationId__c</fullName>
        <label>Medication</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRequestId__c</fullName>
        <label>Medication Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordedDateTime__c</fullName>
        <label>Recorded Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeId__c</fullName>
        <label>Status Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubPotentReasonCodeId__c</fullName>
        <label>Sub Potent Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TypeCodeId__c</fullName>
        <label>Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>